--- a/Cliente_web/Cliente_webFront/src/app/proveedores/proveedores.component.css
+++ b/Cliente_web/Cliente_webFront/src/app/proveedores/proveedores.component.css
@@ -1,7 +1,8 @@
 table {
-  border: 1px solid black;
-  border-collapse: collapse; /* Para que no haya un dobles borde*/
+  width: auto; /* Evita que ocupe todo el ancho */
   margin: auto;
+  border: 1px solid black;
+  border-collapse: collapse;
 }
 
 td, th {
@@ -72,9 +73,10 @@ button.combo-box:hover {
 }
 
 .table-container {
-  max-height: calc(100vh - 150px); /* Ajusta según la altura del header y footer */
-  overflow-y: auto; /* Habilita el scroll vertical en la tabla */
-  border: 1px solid #ddd;
+  display: flex;
+  justify-content: center; /* Centra horizontalmente */
+  align-items: center; /* Centra verticalmente si es necesario */
+  width: 100%;
 }
 
 .table-container table {
@@ -116,15 +118,15 @@ button.combo-box:hover {
 }
 
 /*========================================================================*/
-
 .modal {
   display: none;
-  position: fixed;
+  position: fixed; /* Fijar el modal en la pantalla */
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
   justify-content: center;
   align-items: center;
   animation: fadeIn 0.3s ease-in-out;
@@ -145,19 +147,25 @@ button.combo-box:hover {
   border-radius: 12px;
   width: 90%;
   max-width: 450px;
+  max-height: 80vh;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
-  transform: scale(0.9);
   animation: scaleUp 0.2s ease-in-out forwards;
+
+  position: fixed; /* Asegura que siempre se mantenga centrado */
+  top: 0%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 @keyframes scaleUp {
   from {
-    transform: scale(0.9);
+    transform: translate(-50%, -50%) scale(0.9);
   }
   to {
-    transform: scale(1);
+    transform: translate(-50%, -50%) scale(1);
   }
 }
+
 
 .modal h2 {
   margin-bottom: 15px;
@@ -241,6 +249,7 @@ button.combo-box:hover {
 .botones button:nth-child(1):hover {
   background-color: #a71d2a;
 }
+
 /*======================================================================*/
 
 /* Estilo para los checkboxes */
@@ -282,7 +291,6 @@ tbody tr:hover {
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
   background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -324,7 +332,6 @@ tbody tr:hover {
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
   background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -369,7 +376,6 @@ tbody tr:hover {
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
   background-color: rgba(0, 0, 0, 0.4);
 }
 
